<resources>
    <string name="app_name">journey_sharing</string>
    <string name="access_token">sk.eyJ1IjoiZ2F2aW4xOTk5IiwiYSI6ImNremc5dWwwYTB6MDgycG8wY2ljMXBrOTkifQ.YbZW0OG2FTXrsM3DXB9A9g</string>
    <string name="record">Record</string>
    <string name="journey">Journey</string>
    <string name="message">Message</string>
    <string name="my">My</string>

    <!-- Strings used for journey condition gender -->
    <string name="journey_fragment">Journey</string>
    <string name="record_fragment">Record</string>
    <string name="account_fragment">Account</string>
    <string name="message_fragment">Message</string>
    <string name="title_activity_journey_condition">JourneyConditionActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string-array name="condition_gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <!-- Strings used for condition form -->
    <string name="dateTime">Date and Time</string>
    <string name="originAddress">Origin Address</string>
    <string name="endAddress">End Address</string>
    <string name="gender">Gender</string>
    <string name="minAge">Min Age</string>
    <string name="maxAge">Max Age</string>
    <string name="minScore">Min Score</string>
    <string name="submit">Submit</string>

    <string name="time">datetime</string>
    <string name="origin">originAddress</string>
    <string name="end">endAddress</string>
    <string name="preferGender">preferGender</string>
    <string name="minA">minAge</string>
    <string name="maxA">maxAge</string>
    <string name="score">score</string>

    <string name="originLat">originLat</string>
    <string name="originLon">originLon</string>
    <string name="endLat">endLat</string>
    <string name="endLon">endLon</string>


    <!-- Strings used for selectLocation -->
    <string name="confirm">Confirm</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="move_map_instruction">Move map to place\nmarker at desired location</string>
    <string name="current_location_not_found">Current location is null</string>
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="location_picker_select_location_button_select">Select a location</string>
    <string name="location_picker_dropped_marker_snippet_no_results">No results</string>
    <string name="location_picker_place_name_result">Place name: %1$s</string>

    <!-- Select Location -->
    <string name="placeName">placeName</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="locationMarker">locationMarker</string>

    <!--VALIDATION MESSAGE-->
    <string name="invalid_datetime">Please choose the date</string>
    <string name="invalid_origin_address">Please choose the origin address</string>
    <string name="invalid_end_address">Please choose the end address</string>
    <string name="invalid_gender">Invalid gender</string>
    <string name="invalid_min_age">Invalid minimum age</string>
    <string name="invalid_max_age">Invalid maximum age</string>
    <string name="invalid_min_score">Invalid score</string>

    <!--    message use this-->
    <string name="message_title">ASE_Xiang-Testing</string>
    <string name="way_point_arrived">;</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Peer Key -->
    <string name="Route_1">route_2</string>
    <string name="Route_2">route_2</string>
    <string name="rate_companion">Rate Companion</string>
    <string name="you_are_rating_people_from_the_record">You are rating people from the record:</string>
    <string name="string_you_are_rating_people_from_the_record" />
    <!-- N -->
    <string name="arrived">You have arrived at</string>
    <string name="firebase_record">record</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <!--  end  message use this-->
    <string name="PEER_LIST">PEER_LIST</string>
    <string name="CURRENT_PEER_EMAIL">CURRENT_PEER_EMAIL</string>
    <!--condition list in condition activity-->
    <string name="CONDITION_LIST">CONDITION_LIST</string>


    <string name="set_region_name_hint">Set Zone Name</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_message">Message</string>
    <string name="dialog_positive_button">Positive</string>
    <string name="dialog_toast">Warning</string>
    <string name="dialog_negative_button">give up</string>
    <string name="end_progress_success">Progress Complete</string>
    <string name="toast_no_regions_yet">No Regions Yet</string>
    <string name="navigate_title">Negative Title</string>
    <string name="navigate_positive_button">Find Location</string>
    <string name="navigate_neutral_button_title">Header with Position Neutral</string>
    <string name="toast_region_deleted">Region Deleted</string>
    <string name="navigate_negative_button_title">Locating Canceled</string>
    <string name="region_name">Region %1$d</string>
</resources>
